# fastapi-permissions

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  LICENSE  Makefile  README.md  example.py  main.py  notes.md  permissions.py  pyproject.toml  tox.ini
fastapi_permissions/: __init__.py  example.py  py.typed
tests/: __init__.py  conftest.py  test_all_constant.py  test_example_app.py  test_example_openapi_specs.py  test_permissions.py  test_something.py  test_utility_functions.py
